--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "main": "index.js",
   "repository": "https://github.com/pcbrsites/fc-node-ci.git",
-  "author": "PAULO CESAR LAB2 <paulo.pcbr@gmail.com>",
+  "author": "PAULO CESAR  <paulo.pcbr@gmail.com>",
   "license": "MIT",
   "dependencies": {
     "express": "^4.18.2"
   },
   "scripts": {
     "dev": "node ./src/index.js"
+  },
+  "devDependencies": {
+    "eslint": "^8.47.0"
   }
 }
